[package]
name = "qxeventd"
version = "0.1.0"
edition = "2024"

[dependencies]
smol = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flexi_logger = "0.28"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }

shvproto = { git = "https://github.com/silicon-heaven/libshvproto-rs", branch = "master", features = ["serde"]}
