[package]
name = "qxeventd"
version = "0.1.0"
edition = "2024"

[dependencies]
shvproto = { git = "https://github.com/silicon-heaven/libshvproto-rs", branch = "master", features = ["serde"]}
shvrpc = { git = "https://github.com/silicon-heaven/libshvrpc-rs", branch = "master" }
shvclient = { git = "https://github.com/silicon-heaven/libshvclient-rs", branch = "main", features = ["smol"]}

smol = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flexi_logger = "0.28"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }
serde_yaml = "0.9"
url = "2.2"
async-sqlite = { version = "0.5", features = ["chrono"] }
rusqlite_migration = "2.3.0"
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = { version = "0.4.42", features = ["serde"] }

# For local development
# [patch."https://github.com/silicon-heaven/libshvproto-rs"]
# shvproto = { path = "../libshvproto-rs" }
# [patch."https://github.com/silicon-heaven/libshvrpc-rs"]
# shvrpc = { path = "../libshvrpc-rs" }
# [patch."https://github.com/silicon-heaven/libshvclient-rs"]
# shvclient = { path = "../libshvclient-rs" }
