[package]
name = "qxeventd"
version = "0.1.0"
edition = "2024"

[dependencies]
shvproto = "3.6.27"
shvrpc = "7.1.3"
shvclient = { git = "https://github.com/silicon-heaven/libshvclient-rs", branch = "main", features = ["smol"]}
qxsql = { git = "https://github.com/fvacek/qxsql.git", branch = "master" }

smol = "2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flexi_logger = "0.28"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }
serde_yaml = "0.9"
url = "2.2"
async-sqlite = { version = "0.5", features = ["chrono"] }
rusqlite_migration = "2.3.0"
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = { version = "0.4.42", features = ["serde"] }
async-trait = "0.1.89"

[dev-dependencies]
tempfile = "3.0"
futures-lite = "2.0"
smol-potat = "1.1.2"

# For local development
# [patch."https://github.com/silicon-heaven/libshvproto-rs"]
# shvproto = { path = "../libshvproto-rs" }
# [patch."https://github.com/silicon-heaven/libshvrpc-rs"]
# shvrpc = { path = "../libshvrpc-rs" }
[patch."https://github.com/silicon-heaven/libshvclient-rs"]
shvclient = { path = "../libshvclient-rs" }
[patch."https://github.com/fvacek/qxsql"]
qxsql = { path = "../qxsql" }
